# core-intern-test

./: README.md
effect_sandbox/: CMakeLists.txt  cli.h  effect.cpp  effect.h  main.cpp  readme.md
effect_sandbox/3rd/opencv/modules/java/: CMakeLists.txt
effect_sandbox/3rd/opencv/modules/java/jni/: CMakeLists.txt
effect_sandbox/cmake/: opencv-desktop.cmake  opencv-windows.cmake
tasks/dots/: task.md
tasks/ripple/: task.md
tasks/tone/: tone.md
